--- a/cancer_classification.ipynb
+++ b/cancer_classification.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/Users/qasim_1478/Downloads/TensorFlow_FILES/DATA/cancer_classification.csv')"
+    "df = pd.read_csv('./cancer_classification.csv')"
    ]
   },
   {
